<resources>
    <string name="app_name">Meimei Chen</string>
    <string name="Players">Player</string>
    <string name="playerText">Player Name: </string>
    <string name="PlayerName">Simon Wong </string>
    <string name="numberOfCoins">Enter the number of coins: </string>
    <string name="resultText">Result: </string>
    <string name="headNumber">Head Number: </string>
    <string name="tailNumber">Tail Number: </string>
    <string name="betText">Bet: </string>
    <string name="resultView">It is tie </string>
    <string name="tailNumView">1</string>
    <string name="headNumView">1</string>
    <string name="play">PLAY</string>
    <string name="number">number</string>
    <string name="_2">2</string>
    <string name="play_image">play image</string>
    <string name="player_image">player image</string>
    <string name="name">name</string>
    <string name="string_player">\@string/player</string>
    <string-array name="names">
        <item>HEAD</item>
        <item>TAIL</item>
        <item>IT IS TIE</item>

    </string-array>
</resources>
